--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && npx prisma generate && npx prisma migrate deploy",
+    "migrate:dev": "npx prisma migrate dev",
+    "migrate:deploy": "npx prisma migrate deploy",
+    "build": "tsc && npx prisma generate && npm run migrate:deploy",
     "start": "node dist/server.js",
-    "dev": "nodemon ./src/server.ts"
+    "dev": "nodemon ./src/server.ts",
+    "docker": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
