--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
     "joi": "^17.6.2",
     "jsonwebtoken": "^8.5.1"
   },
@@ -31,6 +32,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/express-rate-limit": "^6.0.0",
+    "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.23",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
